# esp32-network-lib

./: .gitignore  component.mk  curl_config.h
actor_model/: CMakeLists.txt  actor_model.fbs  component.mk  uuid.fbs
actor_model/lib/sole/: sole.hpp
actor_model/src/: actor.cpp  actor.h  actor_model.cpp  actor_model.h  behaviour.h  mailbox.cpp  mailbox.h  node.cpp  node.h  oom_killer_actor_behaviour.cpp  oom_killer_actor_behaviour.h  pid.cpp  pid.h  process.cpp  process.h  received_message.cpp  received_message.h  supervisor_actor_behaviour.cpp  supervisor_actor_behaviour.h  uuid.cpp  uuid.h
base64/: CMakeLists.txt  component.mk
base64/lib/libb64/src/: cdecode.c
base64/src/: base64.cpp  base64.h
bootloader/subproject/: Makefile
captive_portal/: CMakeLists.txt  component.mk
captive_portal/src/: dns_server_actor.cpp  dns_server_actor.h
curl/: CMakeLists.txt  component.mk
curl/lib/: curl_config.h  posix_shims.c
curl/lib/curl/lib/: curl_setup_once.h  rand.c  select.h
curl/lib/curl/lib/vtls/: mbedtls.c  vtls.h
embedded_files/: CMakeLists.txt  component.mk
embedded_files/src/: embedded_files_string_view_wrapper.h
esp-tls/: CMakeLists.txt  esp_tls.c  esp_tls.h
fatfs_image/: CMakeLists.txt  Kconfig.projbuild  Makefile.projbuild  component.mk
firmware_update/: CMakeLists.txt  Kconfig.projbuild  Makefile.componentbuild  Makefile.projbuild  component.mk  firmware_update.fbs  project_include.cmake
firmware_update/src/: firmware_update.cpp  firmware_update.h  firmware_update_actor.cpp  firmware_update_actor.h
firmware_update/templates/: latest.fw.json.tpl
flatbuffers/: CMakeLists.txt  Makefile.componentbuild  Makefile.projbuild  component.mk  project_include.cmake
flatbuffers/lib/flatbuffers/include/flatbuffers/: base.h  idl.h  minireflect.h  util.h
flatbuffers/lib/flatbuffers/src/: idl_parser.cpp  reflection.cpp  util.cpp
flatbuffers/src/: flatbuffers_utils.cpp  flatbuffers_utils.h
googleapis/: CMakeLists.txt  Makefile.componentbuild  component.mk  gviz.fbs  sheets.fbs  visualization.fbs
googleapis/assets/: spreadsheet_insert_row_request_intent.req.json  visualization_query_request_intent.req.json
googleapis/src/: googleapis.cpp  googleapis.h  spreadsheet_insert_row_actor.cpp  spreadsheet_insert_row_actor.h  visualization_query_actor.cpp  visualization_query_actor.h
gsl/: CMakeLists.txt  component.mk
http_server/: CMakeLists.txt  component.mk  http_server.fbs
http_server/src/: http_server_actor.cpp  http_server_actor.h
json/: CMakeLists.txt  component.mk
json/src/: json_emitter.cpp  json_emitter.h
json_flatbuffers/: CMakeLists.txt  component.mk
json_flatbuffers/lib/flatbuffers/src/: idl_parser.cpp  reflection.cpp
json_flatbuffers/src/: flatbuffer_to_json_converter.h  json_emitter.cpp  json_emitter.h  json_to_flatbuffers_converter.cpp  json_to_flatbuffers_converter.h
json_streaming/: CMakeLists.txt  component.mk
json_streaming/src/: json_emitter.cpp  json_emitter.h
jwt/: CMakeLists.txt  component.mk
jwt/src/: jwt.cpp  jwt.h
module_manager/: .gitignore  CMakeLists.txt  Kconfig.projbuild  compile-esp32-elf.sh  component.mk  gen_symbols_c.py  project_include.cmake
module_manager/lib/libelfin/elf/: elf.cc  to_string.cc
module_manager/src/: buffer_view_loader.cpp  buffer_view_loader.h  executable.cpp  executable.h  file_buffer_loader.cpp  file_buffer_loader.h  loader.cpp  loader.h  string_view_buffer_loader.cpp  string_view_buffer_loader.h  sym.h  xtensa_elf.h
module_sandbox/: CMakeLists.txt  project_include.cmake
mqtt/: CMakeLists.txt  Kconfig.projbuild  Makefile.componentbuild  component.mk  mqtt.fbs  project_include.cmake
mqtt/src/: mqtt_client_actor.cpp
mqtt_client/: CMakeLists.txt  Kconfig.projbuild  Makefile.componentbuild  component.mk  mqtt.fbs  project_include.cmake
mqtt_client/src/: mqtt.cpp  mqtt.h  mqtt_client_actor.cpp  mqtt_client_actor.h
network_manager/: CMakeLists.txt  Kconfig.projbuild  component.mk  network_manager.fbs
network_manager/lib/date/include/date/: date.h  ptz.h  tz.h
network_manager/src/: mdns_actor.cpp  mdns_actor.h  network.cpp  network.h  network_check_actor.cpp  network_check_actor.h  network_check_task.cpp  network_check_task.h  network_manager.cpp  network_manager.h  ntp.cpp  ntp.h  ntp_actor.cpp  ntp_actor.h  ntp_task.cpp  ntp_task.h  wifi_actor.cpp  wifi_actor.h  wifi_task.cpp  wifi_task.h
osc/: CMakeLists.txt  component.mk
osc/src/: htonll_ntohll.h  osc.cpp  osc.h
request_manager/: component.mk
request_manager/src/: curl_library_info.cpp  curl_library_info.h  (+17 more)
requests/: .gitignore  CMakeLists.txt  Makefile.componentbuild  Makefile.projbuild  component.mk  project_include.cmake  requests.fbs
requests/lib/delegate/: delegate.hpp
requests/src/: curl_library_info.cpp  curl_library_info.h  flatbuffer_to_json_converter.h  http_utils.cpp  http_utils.h  json_emitter.cpp  json_emitter.h  json_to_flatbuffers_converter.cpp  json_to_flatbuffers_converter.h  oidc_token.cpp  oidc_token.h  oidc_token_parser.cpp  oidc_token_parser.h  queued_endpoint_actor.cpp  queued_endpoint_actor.h  request.cpp  request.h  request_handler.cpp  request_handler.h  request_manager.cpp  request_manager.h  request_manager_actor.cpp  request_manager_actor.h  requests.cpp  requests.h  server_sent_events_emitter.cpp  server_sent_events_emitter.h
sample_module/: CMakeLists.txt
sh2lib/: CMakeLists.txt  sh2lib.c  sh2lib.h
span/: CMakeLists.txt
src/: http_utils.cpp  http_utils.h  json_emitter.cpp  oidc.fbs  oidc_token.cpp  oidc_token.h  oidc_token_parser.h  request.cpp  request.h  request_manager.cpp  response.cpp  response.h
statsd/: CMakeLists.txt  Kconfig.projbuild  component.mk
statsd/src/: timing_metric.cpp  timing_metric.h
udp_server/: CMakeLists.txt  component.mk  udp_server.fbs
udp_server/src/: udp_server_actor.cpp  udp_server_actor.h
utils/: CMakeLists.txt  component.mk
utils/src/: delay.h  filesystem.cpp  filesystem.h  timestamp.cpp  timestamp.h  trace.cpp  trace.h
uuid/: CMakeLists.txt  component.mk  uuid.fbs
uuid/lib/sole/: sole.hpp
uuid/src/: uuid.cpp  uuid.h
(+6 files in other folders)
