idf_component_register(
  SRCS
    "lib/curl/lib/amigaos.c"
    "lib/curl/lib/asyn-ares.c"
    "lib/curl/lib/asyn-thread.c"
    "lib/curl/lib/base64.c"
    "lib/curl/lib/conncache.c"
    "lib/curl/lib/connect.c"
    "lib/curl/lib/content_encoding.c"
    "lib/curl/lib/cookie.c"
    "lib/curl/lib/curl_addrinfo.c"
    "lib/curl/lib/curl_des.c"
    "lib/curl/lib/curl_endian.c"
    "lib/curl/lib/curl_fnmatch.c"
    "lib/curl/lib/curl_gethostname.c"
    "lib/curl/lib/curl_gssapi.c"
    "lib/curl/lib/curl_memrchr.c"
    "lib/curl/lib/curl_multibyte.c"
    "lib/curl/lib/curl_ntlm_core.c"
    "lib/curl/lib/curl_ntlm_wb.c"
    "lib/curl/lib/curl_path.c"
    "lib/curl/lib/curl_rtmp.c"
    "lib/curl/lib/curl_sasl.c"
    "lib/curl/lib/curl_sspi.c"
    "lib/curl/lib/curl_threads.c"
    "lib/curl/lib/dict.c"
    "lib/curl/lib/dotdot.c"
    "lib/curl/lib/easy.c"
    "lib/curl/lib/escape.c"
    "lib/curl/lib/file.c"
    "lib/curl/lib/fileinfo.c"
    "lib/curl/lib/formdata.c"
    "lib/curl/lib/ftp.c"
    "lib/curl/lib/ftplistparser.c"
    "lib/curl/lib/getenv.c"
    "lib/curl/lib/getinfo.c"
    "lib/curl/lib/gopher.c"
    "lib/curl/lib/hash.c"
    "lib/curl/lib/hmac.c"
    "lib/curl/lib/hostasyn.c"
    "lib/curl/lib/hostcheck.c"
    "lib/curl/lib/hostip.c"
    "lib/curl/lib/hostip4.c"
    "lib/curl/lib/hostip6.c"
    "lib/curl/lib/hostsyn.c"
    "lib/curl/lib/http.c"
    "lib/curl/lib/http2.c"
    "lib/curl/lib/http_chunks.c"
    "lib/curl/lib/http_digest.c"
    "lib/curl/lib/http_negotiate.c"
    "lib/curl/lib/http_ntlm.c"
    "lib/curl/lib/http_proxy.c"
    "lib/curl/lib/idn_win32.c"
    "lib/curl/lib/if2ip.c"
    "lib/curl/lib/imap.c"
    "lib/curl/lib/inet_ntop.c"
    "lib/curl/lib/inet_pton.c"
    "lib/curl/lib/krb5.c"
    "lib/curl/lib/ldap.c"
    "lib/curl/lib/llist.c"
    "lib/curl/lib/md4.c"
    "lib/curl/lib/md5.c"
    "lib/curl/lib/memdebug.c"
    "lib/curl/lib/mime.c"
    "lib/curl/lib/mprintf.c"
    "lib/curl/lib/multi.c"
    "lib/curl/lib/netrc.c"
    "lib/curl/lib/non-ascii.c"
    "lib/curl/lib/nonblock.c"
    "lib/curl/lib/nwlib.c"
    "lib/curl/lib/nwos.c"
    "lib/curl/lib/openldap.c"
    "lib/curl/lib/parsedate.c"
    "lib/curl/lib/pingpong.c"
    "lib/curl/lib/pipeline.c"
    "lib/curl/lib/pop3.c"
    "lib/curl/lib/progress.c"
    "lib/curl/lib/rand.c"
    "lib/curl/lib/rtsp.c"
    "lib/curl/lib/security.c"
    "lib/curl/lib/select.c"
    "lib/curl/lib/sendf.c"
    "lib/curl/lib/setopt.c"
    "lib/curl/lib/sha256.c"
    "lib/curl/lib/share.c"
    "lib/curl/lib/slist.c"
    "lib/curl/lib/smb.c"
    "lib/curl/lib/smtp.c"
    "lib/curl/lib/socks.c"
    "lib/curl/lib/socks_gssapi.c"
    "lib/curl/lib/socks_sspi.c"
    "lib/curl/lib/speedcheck.c"
    "lib/curl/lib/splay.c"
    "lib/curl/lib/ssh-libssh.c"
    "lib/curl/lib/ssh.c"
    "lib/curl/lib/strcase.c"
    "lib/curl/lib/strdup.c"
    "lib/curl/lib/strerror.c"
    "lib/curl/lib/strtok.c"
    "lib/curl/lib/strtoofft.c"
    "lib/curl/lib/system_win32.c"
    "lib/curl/lib/telnet.c"
    "lib/curl/lib/tftp.c"
    "lib/curl/lib/timeval.c"
    "lib/curl/lib/transfer.c"
    "lib/curl/lib/url.c"
    "lib/curl/lib/vauth/cleartext.c"
    "lib/curl/lib/vauth/cram.c"
    "lib/curl/lib/vauth/digest.c"
    "lib/curl/lib/vauth/digest_sspi.c"
    "lib/curl/lib/vauth/krb5_gssapi.c"
    "lib/curl/lib/vauth/krb5_sspi.c"
    "lib/curl/lib/vauth/ntlm.c"
    "lib/curl/lib/vauth/ntlm_sspi.c"
    "lib/curl/lib/vauth/oauth2.c"
    "lib/curl/lib/vauth/spnego_gssapi.c"
    "lib/curl/lib/vauth/spnego_sspi.c"
    "lib/curl/lib/vauth/vauth.c"
    "lib/curl/lib/version.c"
    "lib/curl/lib/vtls/gskit.c"
    "lib/curl/lib/vtls/mbedtls.c"
    "lib/curl/lib/vtls/polarssl_threadlock.c"
    "lib/curl/lib/vtls/vtls.c"
    "lib/curl/lib/warnless.c"
    "lib/curl/lib/wildcard.c"
    "lib/curl/lib/x509asn1.c"
    "lib/posix_shims.c"
    "lib/zlib/adler32.c"
    "lib/zlib/compress.c"
    "lib/zlib/crc32.c"
    "lib/zlib/deflate.c"
    "lib/zlib/gzclose.c"
    "lib/zlib/gzlib.c"
    "lib/zlib/gzread.c"
    "lib/zlib/gzwrite.c"
    "lib/zlib/infback.c"
    "lib/zlib/inffast.c"
    "lib/zlib/inflate.c"
    "lib/zlib/inftrees.c"
    "lib/zlib/trees.c"
    "lib/zlib/uncompr.c"
    "lib/zlib/zutil.c"
  INCLUDE_DIRS
    "lib/curl/include"
  PRIV_INCLUDE_DIRS
    "lib"
    "lib/curl/include"
    "lib/curl/lib"
    "lib/zlib"
  PRIV_REQUIRES
    "mbedtls"
)

component_compile_options(
  -DHAVE_CONFIG_H=1
  -DBUILDING_LIBCURL=1
  -DCURL_MAX_WRITE_SIZE=1024
  -DCURL_SOCKET_HASH_TABLE_SIZE=3
  -DCURL_CONNECTION_HASH_SIZE=3
)

set_source_files_properties(
  lib/curl/lib/http2.c lib/curl/lib/vtls/mbedtls.c
  PROPERTIES
  COMPILE_FLAGS -Wno-unused-variable
)
