idf_component_register(
  SRCS
    "lib/curl/lib/altsvc.c"
    "lib/curl/lib/base64.c"
    "lib/curl/lib/conncache.c"
    "lib/curl/lib/connect.c"
    "lib/curl/lib/content_encoding.c"
    "lib/curl/lib/cookie.c"
    "lib/curl/lib/curl_addrinfo.c"
    "lib/curl/lib/curl_ctype.c"
    "lib/curl/lib/curl_get_line.c"
    "lib/curl/lib/doh.c"
    "lib/curl/lib/dotdot.c"
    "lib/curl/lib/dynbuf.c"
    "lib/curl/lib/easy.c"
    "lib/curl/lib/escape.c"
    "lib/curl/lib/fopen.c"
    "lib/curl/lib/formdata.c"
    "lib/curl/lib/getenv.c"
    "lib/curl/lib/getinfo.c"
    "lib/curl/lib/hash.c"
    "lib/curl/lib/headers.c"
    "lib/curl/lib/hostip.c"
    "lib/curl/lib/hostip4.c"
    "lib/curl/lib/hostip6.c"
    "lib/curl/lib/hsts.c"
    "lib/curl/lib/http.c"
    "lib/curl/lib/http_chunks.c"
    "lib/curl/lib/http_proxy.c"
    "lib/curl/lib/if2ip.c"
    "lib/curl/lib/llist.c"
    "lib/curl/lib/mime.c"
    "lib/curl/lib/mprintf.c"
    "lib/curl/lib/mqtt.c"
    "lib/curl/lib/multi.c"
    "lib/curl/lib/netrc.c"
    "lib/curl/lib/nonblock.c"
    "lib/curl/lib/parsedate.c"
    "lib/curl/lib/progress.c"
    "lib/curl/lib/rand.c"
    "lib/curl/lib/rename.c"
    "lib/curl/lib/select.c"
    "lib/curl/lib/sendf.c"
    "lib/curl/lib/setopt.c"
    "lib/curl/lib/share.c"
    "lib/curl/lib/slist.c"
    "lib/curl/lib/socketpair.c"
    "lib/curl/lib/speedcheck.c"
    "lib/curl/lib/splay.c"
    "lib/curl/lib/strcase.c"
    "lib/curl/lib/strdup.c"
    "lib/curl/lib/strerror.c"
    "lib/curl/lib/strtoofft.c"
    "lib/curl/lib/timediff.c"
    "lib/curl/lib/timeval.c"
    "lib/curl/lib/transfer.c"
    "lib/curl/lib/url.c"
    "lib/curl/lib/urlapi.c"
    "lib/curl/lib/vtls/mbedtls.c"
    "lib/curl/lib/vtls/vtls.c"
    "lib/curl/lib/warnless.c"
    "lib/posix_shims.c"
    "lib/zlib/adler32.c"
    "lib/zlib/compress.c"
    "lib/zlib/crc32.c"
    "lib/zlib/deflate.c"
    "lib/zlib/gzclose.c"
    "lib/zlib/gzlib.c"
    "lib/zlib/gzread.c"
    "lib/zlib/gzwrite.c"
    "lib/zlib/infback.c"
    "lib/zlib/inffast.c"
    "lib/zlib/inflate.c"
    "lib/zlib/inftrees.c"
    "lib/zlib/trees.c"
    "lib/zlib/uncompr.c"
    "lib/zlib/zutil.c"
  INCLUDE_DIRS
    "lib/curl/include"
  PRIV_INCLUDE_DIRS
    "lib"
    "lib/curl/include"
    "lib/curl/lib"
    "lib/zlib"
  PRIV_REQUIRES
    "mbedtls"
)

component_compile_options(
  -DHAVE_CONFIG_H=1
  -DBUILDING_LIBCURL=1
  -DCURL_MAX_WRITE_SIZE=1024
  -DCURL_SOCKET_HASH_TABLE_SIZE=3
  -DCURL_CONNECTION_HASH_SIZE=3
)

set_source_files_properties(
  SOURCE
    "lib/curl/lib/http2.c"
    "lib/curl/lib/vtls/mbedtls.c"
  APPEND PROPERTIES
  COMPILE_OPTIONS
    "-Wno-unused-variable;"
)

set_source_files_properties(
  SOURCE
    "lib/curl/lib/formdata.c"
  APPEND PROPERTIES
  COMPILE_OPTIONS
    "-Wno-cast-function-type;"
)

set_source_files_properties(
  SOURCE
    "lib/zlib/infback.c"
    "lib/zlib/inflate.c"
  APPEND PROPERTIES
  COMPILE_OPTIONS
    "-Wno-implicit-fallthrough;"
)
